force-app/main/default/objects/Lead/fields/ELA_Titles__c.field-meta.xml
<CustomField>
    <fullName>ELA_Titles__c</fullName>
    <label>ELA Titles</label>
    <type>TextArea</type>
</CustomField>