force-app/main/default/objects/Lead/fields/Mathematics_titles__c.field-meta.xml
<CustomField>
    <fullName>Mathematics_titles__c</fullName>
    <label>Mathematics titles</label>
    <type>TextArea</type>
</CustomField>