force-app/main/default/objects/Lead/fields/Other_Subject_Area__c.field-meta.xml
<CustomField>
    <fullName>Other_Subject_Area__c</fullName>
    <label>Other Subject Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>