force-app/main/default/objects/Lead/fields/Quantity_for_Quote_Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Quantity_for_Quote_Student_Count__c</fullName>
    <label>Quantity for Quote (Student Count)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>