force-app/main/default/objects/Lead/fields/Request_a_Print_Preview__c.field-meta.xml
<CustomField>
    <fullName>Request_a_Print_Preview__c</fullName>
    <label>Request a Print Preview?</label>
    <type>TextArea</type>
</CustomField>