force-app/main/default/objects/Lead/fields/Science_Titles__c.field-meta.xml
<CustomField>
    <fullName>Science_Titles__c</fullName>
    <label>Science Titles</label>
    <type>TextArea</type>
</CustomField>