force-app/main/default/objects/Lead/fields/Social_Studies_Titles__c.field-meta.xml
<CustomField>
    <fullName>Social_Studies_Titles__c</fullName>
    <label>Social Studies Titles</label>
    <type>TextArea</type>
</CustomField>