force-app/main/default/objects/Lead/listViews/Alabama_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Alabama_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Alabama Queue</label>
    <queue>Alabama_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>