force-app/main/default/objects/Lead/listViews/Arkansas_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Arkansas_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Arkansas Queue</label>
    <queue>Arkansas_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>