force-app/main/default/objects/Lead/listViews/Georgia_Lead.listView-meta.xml
<ListView>
    <fullName>Georgia_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Georgia</label>
    <queue>Georgia</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>