force-app/main/default/objects/Lead/listViews/Louisiana_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Louisiana_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Louisiana Queue</label>
    <queue>Louisiana_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>