force-app/main/default/objects/Lead/listViews/Oklahoma_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Oklahoma_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Oklahoma Queue</label>
    <queue>Oklahoma_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>